# tcast

./: .gitattributes  .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: release.yml
crates/audio/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/host/: Cargo.toml
crates/host/src/: lib.rs  main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/relay/: Cargo.toml
crates/relay/src/: main.rs
crates/watch/: Cargo.toml
crates/watch/examples/: chat_e2e.rs
crates/watch/src/: lib.rs  main.rs
deploy/: Caddyfile  share-terminal-relay.service
tools/: msvcenv.ps1
