[package]
name = "tcast"
version = "0.3.1"
edition = "2024"
description = "Share or watch terminals live — a Twitch/Kick for terminals"
license = "MIT"
repository = "https://github.com/EijunnN/tcast"

[[bin]]
name = "tcast"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
dirs = "5.0.1"
host = { version = "0.1.0", path = "../host" }
protocol = { version = "0.1.0", path = "../protocol" }
self_update = { version = "0.42", features = ["archive-tar", "archive-zip", "compression-flate2"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
toml = "0.8.19"
watch = { version = "0.1.0", path = "../watch" }
