[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
futures-util = "0.3.32"
portable-pty = "0.9.0"
protocol = { version = "0.1.0", path = "../protocol" }
rmp-serde = "1.3.1"
serde = "1.0.228"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-util", "sync", "signal", "net", "time"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
windows-sys = { version = "0.61.2", features = ["Win32_System_Console", "Win32_Foundation"] }
