[package]
name = "relay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["ws"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
futures-util = "0.3.32"
nanoid = "0.5.0"
protocol = { version = "0.1.0", path = "../protocol" }
rand = "0.10.1"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
vt100 = "0.16.2"
