[package]
name = "watch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3.32"
protocol = { version = "0.1.0", path = "../protocol" }
ratatui = "0.30.1"
rmp-serde = "1.3.1"
serde = "1.0.228"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
tui-term = "0.3.4"
vt100 = "0.16.2"
